--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=800, initial-scale=1.0">
   <title>No Matter Blaster</title>
-  <!-- Include Brython -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
   <style>
     body {
@@ -226,8 +225,7 @@
     top_scores = []
     high_score_updated = False
 
-    # Enemies get 1.5 + level speed by default
-    ENEMY_SPEED = 1.5
+    ENEMY_SPEED = 1.5  # Base speed. Will be adjusted
 
     # Player / Boss positions
     player_pos = [WIDTH//2 - PLAYER_HITBOX_SIZE//2, HEIGHT - 2*PLAYER_HITBOX_SIZE]
@@ -329,7 +327,9 @@
 
     def set_music_for_level(lvl):
         """
-        Called on the 'level X' cover screen, so it continues through the actual level.
+        Called right on the Level X screen so audio starts there.
+        Then we do NOT call this again in initialize_game(),
+        ensuring continuity of the same music from the cover screen into gameplay.
         """
         stop_all_music()
         if lvl == 1:
@@ -466,7 +466,7 @@
         ).then(on_complete)
 
     # -------------------------------------------------
-    # 8) INITIALIZATION & RESET
+    # 8) INIT / RESET
     # -------------------------------------------------
     def initialize_game():
         global initializing_level, level, enemies, bullets
@@ -494,7 +494,6 @@
                     })
             boss_hits = 0
         else:
-            # Boss time
             enemies.clear()
             boss_hits = 0
 
@@ -503,16 +502,14 @@
         laser_beams.clear()
         diagonal_shots.clear()
 
-        # Slight tweak: If level == 3, lower the final shooting rate or speed
-        # E.g. reduce speed a bit or reduce bullet chance in enemy_shoot (below).
-        # We'll do a small speed tweak:
+        # Slightly reduce difficulty on Level 3
+        # e.g. If level == 3 => speed is 4.0 instead of 4.5
         ENEMY_SPEED = 1.5 + level
-        # For level 3 specifically, reduce it slightly
         if level == 3:
-            ENEMY_SPEED = 1.5 + 2.5  # 4.0 instead of 4.5 for slightly less difficulty
+            ENEMY_SPEED = 4.0  # instead of 4.5
 
         game_over = False
-        # We set game_started = True only AFTER the cover screen is gone & enemies exist
+        # Only now do we start the actual game
         game_started = True
         level_start_time = window.Date.new().getTime()
 
@@ -521,7 +518,7 @@
         showing_level_title = False
         initializing_level = False
 
-        window.console.log(f"Initialized Level {level} with {len(enemies)} enemies. ENEMY_SPEED={ENEMY_SPEED}")
+        console.log(f"Initialized Level {level}. ENEMY_SPEED={ENEMY_SPEED}, enemies={len(enemies)}")
 
     def reset_game():
         global level, game_started, game_over, score
@@ -530,15 +527,14 @@
         global enemy_bullets, laser_beams, diagonal_shots
 
         level = 1
-        game_started = False
         game_over = False
+        game_started = False
         score = 0
         showing_level_title = False
         showing_final_score = False
         showing_high_score_prompt = False
         final_score_displayed = False
 
-        # Reset positions
         player_pos[0] = WIDTH//2 - PLAYER_HITBOX_SIZE//2
         player_pos[1] = HEIGHT - 2*PLAYER_HITBOX_SIZE
         boss_pos[0]   = WIDTH//2 - BOSS_SIZE//2
@@ -561,14 +557,14 @@
     # -------------------------------------------------
     def start_game():
         """
-        Called on the title screen when the player presses SPACE.
-        We do NOT set game_started yet – we only show the 'level cover',
-        and after that 4-sec delay, initialize_game() sets game_started = True.
+        Called from the title screen after SPACE.
+        We do NOT set game_started here. Instead, we
+        show the 'level cover' and only after 4s do we
+        call initialize_game() => game_started = True
         """
         global level, showing_level_title
         level = 1
         showing_level_title = True
-        console.log("Starting game: will display cover screen for Level 1 now.")
 
     # -------------------------------------------------
     # 10) DRAWING
@@ -637,7 +633,7 @@
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
-        # Increased size from 700,180 => 800,210
+        # Slightly bigger now -> 800x210
         t_w, t_h = 800, 210
         if title_img.complete:
             ctx.drawImage(title_img, (WIDTH - t_w)//2, (HEIGHT//4 - t_h//2), t_w, t_h)
@@ -651,7 +647,6 @@
             ctx.textAlign = "center"
             ctx.fillText("Press SPACE to Play", WIDTH//2, HEIGHT//1.5)
 
-        # Leaderboard
         ctx.font = "bold 28px 'Press Start 2P'"
         ctx.textAlign = "center"
         ctx.fillText("Leaderboard", WIDTH//2, HEIGHT//1.2 - 40)
@@ -664,8 +659,9 @@
                     HEIGHT//1.2 + 30*i
                 )
 
-    # Cover Screen for each level
+    # Level Cover Screen
     def draw_level_title():
+        global level
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
@@ -692,15 +688,15 @@
 
         if cover_img and cover_img.complete:
             c_w, c_h = get_scaled_dims(cover_img, 400)
-            ctx.drawImage(cover_img, (WIDTH-c_w)//2, HEIGHT//3 - 50, c_w, c_h)
+            ctx.drawImage(cover_img, (WIDTH - c_w)//2, HEIGHT//3 - 50, c_w, c_h)
 
         # *** Start level music right now. ***
         set_music_for_level(level)
 
-        # Wait 4s, then actually populate enemies (which sets game_started=True)
+        # Wait 4s, then populate enemies (which sets game_started = True).
         window.setTimeout(initialize_game, 4000)
 
-    # Draw gameplay
+    # Gameplay
     def draw_gameplay():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         draw_static_bg()
@@ -715,13 +711,12 @@
         if level > MAX_LEVELS:
             draw_boss()
 
-        # Display Score
+        # Score text
         ctx.fillStyle = "white"
         ctx.font = "24px 'Press Start 2P'"
         ctx.textAlign = "left"
         ctx.fillText(f"Score: {score}", 20, 40)
 
-    # Final Score
     def draw_final_score():
         global final_score_displayed
         if final_score_displayed:
@@ -743,14 +738,6 @@
             show_high_score_prompt()
         else:
             window.setTimeout(reset_game, 3000)
-
-    def show_high_score_prompt():
-        high_score_modal.style.display = "block"
-        player_name_input.focus()
-
-    def hide_high_score_prompt():
-        high_score_modal.style.display = "none"
-        player_name_input.value = ""
 
     # -------------------------------------------------
     # 11) MAIN LOOP
@@ -784,20 +771,24 @@
 
         move_stars()
 
+        # Move bullets
         for b in bullets[:]:
             b[1] -= BULLET_SPEED
             if b[1] < 0:
                 bullets.remove(b)
 
+        # Move enemy bullets
         for eb in enemy_bullets[:]:
             eb[1] += ENEMY_BULLET_SPEED
             if eb[1] > HEIGHT:
                 enemy_bullets.remove(eb)
 
+        # Laser beams expire
         for l in laser_beams[:]:
             if (window.Date.new().getTime() - l["timestamp"]) > LASER_DURATION:
                 laser_beams.remove(l)
 
+        # Diagonal shots
         for s in diagonal_shots[:]:
             s["x"] += s["dx"]
             s["y"] += s["dy"]
@@ -806,7 +797,6 @@
 
         handle_collisions()
 
-        # Enemy / Boss movement
         if level <= MAX_LEVELS:
             move_down = False
             for e in enemies:
@@ -866,20 +856,17 @@
 
         # Player collisions
         if not final_score_displayed:
-            # Enemy bullets
             for eb in enemy_bullets[:]:
                 if (player_pos[0] <= eb[0] <= player_pos[0]+PLAYER_HITBOX_SIZE and
                     player_pos[1] <= eb[1] <= player_pos[1]+PLAYER_HITBOX_SIZE):
                     game_over = True
 
-            # Laser beams
             for l in laser_beams[:]:
                 if (player_pos[0] <= l["x"] + LASER_WIDTH and
                     l["x"] <= player_pos[0] + PLAYER_HITBOX_SIZE and
                     player_pos[1] <= l["y"]):
                     game_over = True
 
-            # Diagonal shots
             for s in diagonal_shots[:]:
                 if (player_pos[0] <= s["x"] <= player_pos[0]+PLAYER_HITBOX_SIZE and
                     player_pos[1] <= s["y"] <= player_pos[1]+PLAYER_HITBOX_SIZE):
@@ -914,10 +901,10 @@
             return
 
         if level <= MAX_LEVELS:
-            # Slightly reduce shooting chance for level 3
-            base_chance = 0.03 + 0.01*level  # e.g. L3 => 0.06
+            # Slightly reduce bullet spam at level 3
+            base_chance = 0.03 + 0.01*level  # L3 => 0.06
             if level == 3:
-                base_chance = 0.04  # Instead of 0.06 for less bullet spam
+                base_chance = 0.04  # instead of 0.06
             for e in enemies:
                 if window.Math.random() < base_chance:
                     enemy_bullets.append([
@@ -972,7 +959,7 @@
             return
 
         if e.keyCode == 32:
-            # Start from title
+            # Start from title if not started
             if not game_started and not showing_level_title:
                 start_game()
             elif not showing_level_title and not game_over:
