--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     level = 1
     game_over = False
     game_started = False
-    showing_level_title = False
+    showing_level_title = False  # "cover screen" flag
     showing_final_score = False
     showing_high_score_prompt = False
 
@@ -324,10 +324,6 @@
         boss_audio.pause();   boss_audio.currentTime   = 0
 
     def set_music_for_level(lvl):
-        """
-        Minimal fix: This ensures the music begins 
-        as soon as the 'level X' screen is drawn.
-        """
         stop_all_music()
         if lvl == 1:
             level1_audio.play()
@@ -466,6 +462,10 @@
     # 8) INITIALIZATION & RESET
     # -------------------------------------------------
     def initialize_game():
+        """
+        Create the enemies / boss for the current level.
+        Called AFTER the 4s cover screen has finished.
+        """
         global initializing_level, level, enemies, bullets
         global enemy_bullets, laser_beams, diagonal_shots
         global boss_hits, game_over, game_started, level_start_time
@@ -506,8 +506,6 @@
 
         # Done
         initializing_level = False
-        global showing_level_title
-        showing_level_title = False
 
     def reset_game():
         global level, game_started, game_over, score
@@ -516,8 +514,8 @@
         global enemy_bullets, laser_beams, diagonal_shots
 
         level = 1
-        game_over = False
         game_started = False
+        game_over = False
         score = 0
         showing_level_title = False
         showing_final_score = False
@@ -544,7 +542,7 @@
             animation_running = True
 
     # -------------------------------------------------
-    # 9) START GAME (Restored)
+    # 9) START GAME 
     # -------------------------------------------------
     def start_game():
         """
@@ -553,11 +551,36 @@
         global level, game_started, showing_level_title
         level = 1
         game_started = True
-        showing_level_title = True
-        console.log("Starting the game at Level 1. Will show Level 1 cover screen.")
+        # Instead of showing enemies right away, we show the cover
+        show_cover_screen()
 
     # -------------------------------------------------
-    # 10) DRAWING
+    # 10) COVER SCREEN CONTROL
+    # -------------------------------------------------
+    def show_cover_screen():
+        """
+        Show the cover screen for this level, start music, 
+        and schedule the 4-second wait.
+        """
+        global showing_level_title
+        showing_level_title = True
+
+        # Start the level music immediately (so it plays on the cover)
+        set_music_for_level(level)
+
+        # After 4 seconds, hide cover + create enemies
+        window.setTimeout(finish_cover_screen, 4000)
+
+    def finish_cover_screen():
+        """
+        Hide the cover screen, then populate enemies.
+        """
+        global showing_level_title
+        showing_level_title = False
+        initialize_game()
+
+    # -------------------------------------------------
+    # 11) DRAWING
     # -------------------------------------------------
     def draw_stars():
         ctx.fillStyle = "white"
@@ -618,11 +641,12 @@
         if static_bg_level.complete:
             ctx.drawImage(static_bg_level, 0, 0, WIDTH, HEIGHT)
 
+    # Title Page
     def draw_title_screen():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
-        # Increased size from ~620,160 => 700,180
+        # Larger area for the title image
         t_w, t_h = 700, 180
         if title_img.complete:
             ctx.drawImage(
@@ -654,11 +678,15 @@
                     HEIGHT//1.2 + 30*i
                 )
 
+    # Cover Screen for each level
     def draw_level_title():
+        """
+        Draw the level cover (purely visual).
+        No music or setTimeout calls here—handled in show_cover_screen().
+        """
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
-
         ctx.fillStyle = "yellow"
         ctx.font = "bold 48px 'Press Start 2P'"
         ctx.textAlign = "center"
@@ -684,12 +712,7 @@
             c_w, c_h = get_scaled_dims(cover_img, 400)
             ctx.drawImage(cover_img, (WIDTH-c_w)//2, HEIGHT//3 - 50, c_w, c_h)
 
-        # *** Start level music right away ***
-        set_music_for_level(level)
-
-        # Wait 4s, then actually populate enemies
-        window.setTimeout(initialize_game, 4000)
-
+    # Draw the actual gameplay
     def draw_gameplay():
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         draw_static_bg()
@@ -710,6 +733,7 @@
         ctx.textAlign = "left"
         ctx.fillText(f"Score: {score}", 20, 40)
 
+    # Game Over / Final Score
     def draw_final_score():
         global final_score_displayed
         if final_score_displayed:
@@ -726,10 +750,12 @@
         ctx.fillText("Game Over", WIDTH//2, HEIGHT//3)
         ctx.fillText(f"Final Score: {score}", WIDTH//2, HEIGHT//2)
 
+        # If new high score
         if high_score_updated:
             ctx.fillText("New High Score!", WIDTH//2, HEIGHT//1.7)
             show_high_score_prompt()
         else:
+            # Return to title after 3s
             window.setTimeout(reset_game, 3000)
 
     def show_high_score_prompt():
@@ -741,20 +767,22 @@
         player_name_input.value = ""
 
     # -------------------------------------------------
-    # 10) MAIN LOOP
+    # 12) MAIN LOOP
     # -------------------------------------------------
     def main_loop(timestamp):
         global animation_running, showing_final_score
+
         if not animation_running:
             animation_running = True
 
         if showing_final_score:
             draw_final_score()
         elif showing_level_title:
-            draw_level_title()
+            draw_level_title()   # purely draws the cover screen
         elif not game_started:
             draw_title_screen()
         elif game_over:
+            # show final
             showing_final_score = True
             draw_final_score()
         else:
@@ -763,35 +791,40 @@
         window.requestAnimationFrame(main_loop)
 
     # -------------------------------------------------
-    # 11) UPDATES & COLLISIONS
+    # 13) UPDATES & COLLISIONS
     # -------------------------------------------------
     def update():
-        # Skip updates if not in actual gameplay
         if game_over or not game_started or showing_level_title or showing_final_score:
             return
 
+        # Move Stars
         move_stars()
 
+        # Bullets
         for b in bullets[:]:
             b[1] -= BULLET_SPEED
-            if b[1] < 0: 
+            if b[1] < 0:
                 bullets.remove(b)
 
+        # Enemy bullets
         for eb in enemy_bullets[:]:
             eb[1] += ENEMY_BULLET_SPEED
-            if eb[1] > HEIGHT: 
+            if eb[1] > HEIGHT:
                 enemy_bullets.remove(eb)
 
+        # Laser beams expire
         for l in laser_beams[:]:
             if (window.Date.new().getTime() - l["timestamp"]) > LASER_DURATION:
                 laser_beams.remove(l)
 
+        # Diagonal shots
         for s in diagonal_shots[:]:
             s["x"] += s["dx"]
             s["y"] += s["dy"]
             if s["y"] > HEIGHT or s["x"] < 0 or s["x"] > WIDTH:
                 diagonal_shots.remove(s)
 
+        # Collisions
         handle_collisions()
 
         # Enemy / Boss movement
@@ -799,6 +832,8 @@
             move_down = False
             for e in enemies:
                 e["pos"][0] += ENEMY_SPEED
+
+                # Check if enemy reached bottom => game over
                 if e["pos"][1] + ENEMY_SIZE >= HEIGHT:
                     global game_over
                     game_over = True
@@ -812,10 +847,12 @@
                 global ENEMY_SPEED
                 ENEMY_SPEED = -ENEMY_SPEED
 
+            # If no more enemies -> level_up()
             if not enemies and not initializing_level:
                 level_up()
 
         else:
+            # Boss movement
             global boss_direction
             boss_pos[0] += boss_direction * 10
             if boss_pos[0] <= 0 or boss_pos[0] >= WIDTH - BOSS_SIZE:
@@ -823,6 +860,7 @@
             boss_pos[1] += window.Math.random()*10 - 5
             boss_pos[1] = max(0, min(HEIGHT//4, boss_pos[1]))
 
+            # If enough boss hits -> game over
             if boss_hits >= BOSS_HITS_REQUIRED and not final_score_displayed:
                 global game_over
                 game_over = True
@@ -830,6 +868,7 @@
     def handle_collisions():
         global game_over, score, boss_hits
 
+        # Normal enemies
         if level <= MAX_LEVELS:
             for e in enemies[:]:
                 ex, ey = e["pos"]
@@ -842,6 +881,7 @@
                         explosion_audio.play()
                         break
         else:
+            # Boss collisions
             for b in bullets[:]:
                 bx, by = b
                 if (boss_pos[0] <= bx <= boss_pos[0] + BOSS_SIZE and
@@ -850,23 +890,28 @@
                     boss_hits += 1
                     explosion_audio.play()
 
+        # Player collisions
         if not final_score_displayed:
+            # Enemy bullets vs player
             for eb in enemy_bullets[:]:
                 if (player_pos[0] <= eb[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
                     player_pos[1] <= eb[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                     game_over = True
 
+            # Laser beams
             for l in laser_beams[:]:
                 if (player_pos[0] <= l["x"] + LASER_WIDTH and
                     l["x"] <= player_pos[0] + PLAYER_HITBOX_SIZE and
                     player_pos[1] <= l["y"]):
                     game_over = True
 
+            # Diagonal shots
             for s in diagonal_shots[:]:
                 if (player_pos[0] <= s["x"] <= player_pos[0]+PLAYER_HITBOX_SIZE and
                     player_pos[1] <= s["y"] <= player_pos[1]+PLAYER_HITBOX_SIZE):
                     game_over = True
 
+            # Enemy overlap
             if level <= MAX_LEVELS:
                 for e in enemies:
                     ex, ey = e["pos"]
@@ -877,17 +922,21 @@
                             game_over = True
 
     def level_up():
-        global level, showing_level_title, score
+        global level, score
         level += 1
+
+        # Time-based bonus
         bonus = max(
             0,
             int((120000 - (window.Date.new().getTime() - level_start_time))/800)
         )
         score += bonus
-        showing_level_title = True
+
+        # Now go to the cover screen for the new level
+        show_cover_screen()
 
     # -------------------------------------------------
-    # 12) ENEMY SHOOTING
+    # 14) ENEMY SHOOTING
     # -------------------------------------------------
     def enemy_shoot():
         if game_over or not game_started or showing_level_title or showing_final_score:
@@ -929,7 +978,7 @@
                 boss_last_diagonal_shot = now
 
     # -------------------------------------------------
-    # 13) CONTROLS
+    # 15) CONTROLS
     # -------------------------------------------------
     def handle_keydown(e):
         global game_started, game_over, player_last_shot
@@ -975,7 +1024,7 @@
         flash_text = not flash_text
 
     # -------------------------------------------------
-    # 14) LOADING SCREEN
+    # 16) LOADING SCREEN
     # -------------------------------------------------
     def show_loading_screen():
         loading_bar_container.style.display = "flex"
@@ -992,11 +1041,11 @@
                 s["x"] = window.Math.random()*WIDTH
 
     # -------------------------------------------------
-    # 15) START
+    # 17) START
     # -------------------------------------------------
     show_loading_screen()
-    window.setInterval(update, 30)         
-    window.setInterval(enemy_shoot, 500)  
+    window.setInterval(update, 30)         # ~30ms => 33 FPS
+    window.setInterval(enemy_shoot, 500)  # Enemy shoots every 0.5s
     window.setInterval(toggle_flash_text, 1000)
   </script>
 </body>
